# papyrus

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: main.py
app/controllers/: __init__.py  template_controller.py
app/dtos/: render_dto.py
app/services/: template_service.py
